[gd_scene load_steps=17 format=3 uid="uid://0x1o6uohaw0o"]

[ext_resource type="Theme" uid="uid://duyhmdjgt61qo" path="res://resources/settings_theme.tres" id="1_bj0pt"]
[ext_resource type="Script" path="res://ui/console/power_ui.gd" id="2_6xq8u"]
[ext_resource type="Texture2D" uid="uid://caxvblfeamx4w" path="res://ui/console/icons/oxygen.png" id="3_8b8si"]
[ext_resource type="Texture2D" uid="uid://dvj2n15cawvgp" path="res://ui/console/icons/engine.png" id="3_52mdt"]
[ext_resource type="AudioStream" uid="uid://oi5p1kypn8a" path="res://audio/sfx/power_shunt/UI_shunt_error.ogg" id="3_asih4"]
[ext_resource type="Texture2D" uid="uid://cswfjcprdhh8d" path="res://assets/props/console/model/textures/MaterialFBXASC032FBXASC0352142146802_emissive.jpeg" id="3_c6kjy"]
[ext_resource type="Texture2D" uid="uid://b644atuxjclve" path="res://ui/console/icons/power-3.png" id="3_n3oht"]
[ext_resource type="Texture2D" uid="uid://cktlcm1idc62v" path="res://ui/console/icons/energy.png" id="4_8x2fn"]
[ext_resource type="Texture2D" uid="uid://bsr3o5753fesh" path="res://ui/console/icons/power-4.png" id="4_58v3n"]
[ext_resource type="Texture2D" uid="uid://bl3wka2bk5rr2" path="res://ui/console/icons/shields.png" id="4_jwdva"]
[ext_resource type="AudioStream" uid="uid://dhf3s4gt403t1" path="res://audio/sfx/power_shunt/UI_increase_power.ogg" id="4_ufhxc"]
[ext_resource type="AudioStream" uid="uid://b2d357cjxgbdk" path="res://audio/sfx/power_shunt/UI_decrease_power.ogg" id="5_2txau"]
[ext_resource type="Texture2D" uid="uid://b5dqc340mhtqi" path="res://ui/console/icons/weapons.png" id="5_jhgy8"]
[ext_resource type="Theme" uid="uid://cov354ofq62bt" path="res://ui/console/console_theme.tres" id="7_f106u"]
[ext_resource type="Texture2D" uid="uid://b6xmy31lxl5on" path="res://ui/console/icons/power-2.png" id="7_nsjdc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wf16q"]
bg_color = Color(0.737255, 0.737255, 0.737255, 0.313726)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="power display" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bj0pt")
script = ExtResource("2_6xq8u")
shunt_error_sfx = ExtResource("3_asih4")
shunt_up_sfx = ExtResource("4_ufhxc")
shunt_down_sfx = ExtResource("5_2txau")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_c6kjy")
expand_mode = 3

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -312.0
offset_right = 136.0
offset_bottom = 312.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bj0pt")
theme_override_styles/panel = SubResource("StyleBoxFlat_wf16q")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("1_bj0pt")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Power" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureProgressBar" type="TextureProgressBar" parent="PanelContainer/MarginContainer/VBoxContainer/Power"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_bj0pt")
max_value = 4.0
value = 4.0
fill_mode = 3
texture_under = ExtResource("4_58v3n")
texture_progress = ExtResource("4_58v3n")
tint_under = Color(0.337255, 0.337255, 0.337255, 1)
tint_progress = Color(0, 1, 0, 0.501961)

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Power"]
modulate = Color(1, 1, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
button_mask = 0
icon = ExtResource("4_8x2fn")
flat = true

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_bj0pt")
theme_override_constants/h_separation = 80
theme_override_constants/v_separation = 0
columns = 2

[node name="Engine" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureProgressBar" type="TextureProgressBar" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/Engine"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_bj0pt")
max_value = 4.0
value = 4.0
fill_mode = 3
texture_under = ExtResource("3_n3oht")
texture_progress = ExtResource("3_n3oht")
tint_under = Color(0.337255, 0.337255, 0.337255, 1)
tint_progress = Color(0, 1, 0, 0.501961)

[node name="Engine" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/Engine"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("7_f106u")
theme_type_variation = &"PowerShuntButton"
button_mask = 3
icon = ExtResource("3_52mdt")
flat = true

[node name="O2" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureProgressBar" type="TextureProgressBar" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/O2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 4.0
fill_mode = 3
texture_under = ExtResource("7_nsjdc")
texture_progress = ExtResource("7_nsjdc")
tint_under = Color(0.337255, 0.337255, 0.337255, 1)
tint_progress = Color(0, 1, 0, 0.501961)

[node name="O2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/O2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("7_f106u")
theme_type_variation = &"PowerShuntButton"
action_mode = 0
button_mask = 3
icon = ExtResource("3_8b8si")
flat = true

[node name="Shields" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureProgressBar" type="TextureProgressBar" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/Shields"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 4.0
fill_mode = 3
texture_under = ExtResource("7_nsjdc")
texture_progress = ExtResource("7_nsjdc")
tint_under = Color(0.337255, 0.337255, 0.337255, 1)
tint_progress = Color(0, 1, 0, 0.501961)

[node name="Shields" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/Shields"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("7_f106u")
theme_type_variation = &"PowerShuntButton"
text = "
"
icon = ExtResource("4_jwdva")
flat = true

[node name="Weapons" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureProgressBar" type="TextureProgressBar" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/Weapons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 4.0
step = 0.0
fill_mode = 3
texture_under = ExtResource("7_nsjdc")
texture_progress = ExtResource("7_nsjdc")
tint_under = Color(0.337255, 0.337255, 0.337255, 1)
tint_progress = Color(0, 1, 0, 0.501961)

[node name="Weapons" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer/Weapons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("7_f106u")
theme_type_variation = &"PowerShuntButton"
action_mode = 0
button_mask = 3
text = "

"
icon = ExtResource("5_jhgy8")
flat = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -20.0

[connection signal="gui_input" from="PanelContainer/MarginContainer/VBoxContainer/GridContainer/Engine/Engine" to="." method="_on_engine_gui_input"]
[connection signal="gui_input" from="PanelContainer/MarginContainer/VBoxContainer/GridContainer/O2/O2" to="." method="_on_o2_gui_input"]
[connection signal="gui_input" from="PanelContainer/MarginContainer/VBoxContainer/GridContainer/Shields/Shields" to="." method="_on_shields_gui_input"]
[connection signal="gui_input" from="PanelContainer/MarginContainer/VBoxContainer/GridContainer/Weapons/Weapons" to="." method="_on_weapons_gui_input"]
[connection signal="timeout" from="Timer" to="." method="update_ui"]
